--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,10 @@ license = Perl_5
 copyright_holder = Tatsuhiko Miyagawa
 copyright_year   = 2006
 
-version = 0.11
+version = 0.12
 
 [@Basic]
 [PkgVersion]
 [AutoPrereqs]
+[MetaJSON]
 [GithubMeta]
